@@ -35,6 +35,10 @@ Changes in Go4 v4.03.00 (June 09)
 6. Better autoscale of THStack class
 7. Ensure that drawing of histogram first time done only once,
    in case of 2D histograms doubles the performance
+8. When running gui, one can specify one or several root files,
+   which will be loaded automatically
+9. Fix error (reported by Nick) - gui was hanging when 
+   non-existing hotstart file was specified.
      
 
 Changes in Go4 v4.02.00 (April 09)
